<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/reaction_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:text="@string/reaction_game" />

    <Button
        android:id="@+id/puzzle_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reaction_game_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:text="@string/puzzle_game" />

    <Button
        android:id="@+id/obstacle_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/puzzle_game_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:text="@string/obstacle_game" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/obstacle_game_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:text="@string/sign_in" />
</RelativeLayout>